--- a/style.css
+++ b/style.css
@@ -1,40 +1,58 @@
 * {
     box-sizing: border-box;
     margin: 0;
+    padding: 0;
+}
+
+:root {
+    --general-bg-color: aliceblue;
+    --general-txt-color: #ffff;
+    --btn-bg-color: #ffff;
+
+    --sedan-gb-color: #e28625;
+    --suvs-bg-color: #006971;
+    --lux-bg-color: #004140;
+
+    --card-dimention: 17.5rem;
+    --min-diplay: 17rem;
+    --general-font-family: sans-serif, 'Courier New', Courier, monospace;
 }
 
 body {
-    background-color: aliceblue;
-    color: white;
-    font-family: sans-serif, 'Courier New', Courier, monospace;
+    background-color: var(--general-bg-color);
+    color: var(--general-txt-color);
+    font-family: var(--general-font-family);
+    height: auto;
+    padding: 2rem 0;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     flex-direction: column;
-}
-
-.main {
-    display: flex;
-    justify-content: center;
-    margin-top: 10%;
+    align-items: center;
 }
 
 .cards {
-    width: 20%;
-    height: 500px;
+    width: var(--card-dimention);
+    min-width: var(--min-diplay);
+    padding: 2rem;
+    height: auto;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    padding: 3%;
+    gap: 2.5rem;
 }
 
-img {
-    width: 50px;
-    height: 30px;
+.figure {
+    width: 3.5rem;
+}
+
+.icon {
+    width: 100%;
+    object-fit: cover;
 }
 
 .cardTitle {
-    font-size: 30px;
+    font-size: 2rem;
     font-weight: bold;
 }
 
@@ -43,23 +61,34 @@ img {
 }
 
 .sedan {
-    background-color: #e28625;
-    border-radius: 5% 0 0 5%;
+    background-color: var(--sedan-gb-color);
+    border-radius: 3% 3% 0 0;
+}
+
+.sedan .btn {
+    color: var(--sedan-gb-color);
 }
 
 .suv {
-    background-color: #006971;
+    background-color: var(--suvs-bg-color);
+}
+
+.suv .btn {
+    color: var(--suvs-bg-color);
 }
 
 .luxury {
-    background-color: #004140;
-    border-radius: 0 5% 5% 0;
+    background-color: var(--lux-bg-color);
+    border-radius: 0 3% 3% 0;
+}
+
+.luxury .btn {
+    color: var(--lux-bg-color);
 }
 
 .btn {
-    border: 3px solid white;
-    border-radius: 25px;
-    color: white;
+    background-color: var(--btn-bg-color);
+    border-radius: 1.5rem;
     font-weight: bold;
     padding: 15px 32px;
     text-align: center;
@@ -69,68 +98,49 @@ img {
     width: 80%;
 }
 
-@media only screen and (max-width: 800px) {
-    .cards {
-        width: 30%;
-        height: 400px;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-evenly;
-        padding: 3%;
-    }
-}
-
-
-
-@media only screen and (max-width: 500px) {
-    .main {
-        display: flex;
-        justify-content: center;
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .cards {
-        width: 90%;
-        height: 400px;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-evenly;
-        padding: 0 10%;
+@media (min-width: 26.8rem) {
+    body {
+        flex-direction: row;
     }
 
     .sedan {
-        border-radius: 5% 5% 0 0;
+        border-radius: 3% 0 0;
+    }
+
+    .suv {
+        border-radius: 0 3% 0 0;
     }
 
     .luxury {
-        border-radius: 0 0 5% 5%;
+        width: 35rem;
+        border-radius: 0 0 3% 3%;
     }
+
+    .luxury .btn {
+        width: 10rem;
+        align-self: center;
+    }
+}
+
+@media (min-width: 60rem) {
+
+    .cards {
+        max-width: var(--card-dimention);
+    }
+
     .btn {
-        background-color: white;
-        border-radius: 25px;
-        color: darkgreen;
-        font-weight: bold;
-        padding: 15px 32px;
-        text-align: center;
-        text-decoration: none;
-        display: inline-block;
-        font-size: 13px;
-        width: 80%;
-        margin-top: 30%;
+        margin-top: 5rem;
     }
 
-    .sedanBtn {
-        color: #e28625; 
+    .sedan {
+        border-radius: 3% 0 0 3%;
     }
 
-    .suvBtn {
-        color: #006971;
-    
+    .suv {
+        border-radius: 0;
     }
 
-    .luxBtn {
-        color: #004140;
+    .luxury {
+        border-radius: 0 3% 3% 0;
     }
-
 }
